@@ -107,6 +107,7 @@ performance improvements:
   faster scaling of fractional coefficients in rows (now enabled), improved parameter settings (presolving)   
 - changed default value of parameter "nodeselection/restartdfs/selectbestfreq" to 0;
   this means if the current node has no children the node with the best bound is selected (SCIPgetBestboundNode()) 
+- separators are not called any longer for an integral root LP
 
 fixed bugs:
 - fixed bug in lpi_clp.cpp: SCIPlpiChgBounds checks if the column status exists in Clp before using it
@@ -149,6 +150,7 @@ fixed bugs:
 - fixed  SCIPvarIsTransformedOrigvar() in var.c (variables generated by presol_inttobinary returned false)
 - fixed bug in heur_nlp.c: objective function had wrong sign for maximization problems
 - fixed potential bug in OCTANE heuristic with nonbasic solutions
+- fixed wrong assert in Cplex LPI: Due to numerical inaccuracies, a few pivtos might be performed after refactorization
 
 plugins:
 - added constraint handler for second order cone constraints (cons_soc.(c|h))
